config/kubernetes/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: help-with-child-arrangements-ingress
  namespace: help-with-child-arrangements-staging
  annotations:
    external-dns.alpha.kubernetes.io/set-identifier: help-with-child-arrangements-ingress-help-with-child-arrangements-staging-green
    external-dns.alpha.kubernetes.io/aws-weight: "100"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: app-secrets
spec:
  ingressClassName: default
  tls:
  - hosts:
    - staging-help-with-child-arrangements.apps.live.cloud-platform.service.justice.gov.uk
  - hosts:
    - staging.helpwithchildarrangements.service.justice.gov.uk
    secretName: help-with-child-arrangements-cert
  rules:
  - host: staging-help-with-child-arrangements.apps.live.cloud-platform.service.justice.gov.uk
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: help-with-child-arrangements-service
            port:
              number: 3000
  - host: staging.helpwithchildarrangements.service.justice.gov.uk
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: help-with-child-arrangements-service
            port:
              number: 3000
